add home block, full header 1920

--- a/src/templates/layouts/default.twig
+++ b/src/templates/layouts/default.twig
@@ -36,11 +36,8 @@
                 Рус
             </div>
             <div class="menu">
-                <div class="item" data-value="1">
-                    <a href="#">Eng</a>
-                </div>
                 <div class="item" data-value="0"><a href="#">Укр</a></div>
-                <div class="item active selected" data-value="0"><a href="#">Рус</a></div>
+                <div class="item active selected" data-value="1"><a href="#">Рус</a></div>
             </div>
         </div>
         <div class="city_button">
@@ -74,16 +71,8 @@
             <i class="dropdown icon"></i>
         </div>
         <div class="ui custom popup popup_all phone_popup">
-            <a href="tel:+380800123560" class="link_call">Заказать звонок</a>
+            <div class="link_call">Заказать звонок</div>
             <div class="social_link">
-                <a href="#" class="social_link_item">
-                    <div class="social_img">
-                        <img src="../../assets/img/svg/Chat.svg" alt="">
-                    </div>
-                    <div class="social_text">
-                        Чат на сайте
-                    </div>
-                </a>
                 <a href="#" class="social_link_item">
                     <div class="social_img">
                         <img src="../../assets/img/svg/Messenger.svg" alt="">
@@ -165,16 +154,16 @@
         </div>
         <div class="icon_container">
             <div class="icon_img login_icon">
-                <img src="../../assets/img/svg/Log_in.svg" alt="">
+                <img src="../../assets/img/svg/Log_in.svg" alt="" class="svg">
             </div>
             <div class="icon_img eye_icon">
-                <img src="../../assets/img/svg/eye.svg" alt="">
+                <img src="../../assets/img/svg/eye.svg" alt="" class="svg">
                 <div class="label_icon">
                     33
                 </div>
             </div>
             <div class="icon_img libra_icon">
-                <img src="../../assets/img/svg/Libra.svg" alt="">
+                <img src="../../assets/img/svg/Libra.svg" alt="" class="svg">
                 <div class="label_icon gray">
                     0
                 </div>
@@ -184,14 +173,14 @@
     <div class="button_all button_header">Вызвать замерщика</div>
     <div class="basket_button">
         <div class="icon_img basket_icon">
-            <img src="../../assets/img/svg/basket.svg" alt="">
+            <img src="../../assets/img/svg/basket.svg" alt="" class="svg ">
             <div class="label_icon">
                 5
             </div>
         </div>
     </div>
 </header>
-<div class="header_bottom">
+<div class="header_bottom ">
     <nav class="menu_list">
         <ul class="menu_list_grid">
             <li class="icon_all">
@@ -199,13 +188,114 @@
                     Жалюзи
                 </a>
                 <i class="dropdown icon"></i>
-
+                <div class="hover_list">
+                    <div class="hover_menu_container">
+                        <div class="hover_menu_row">
+                            <a href="#" class="hover_menu_row_img">
+                                <img src="../../assets/img/Rectangle146.png" alt="">
+                            </a>
+                            <div class="hover_menu_row_content">
+                                <a href="#" class="hover_menu_row_title">Горизонтальные жалюзи</a>
+                                <ul class="hover_menu_row_info">
+                                    <li><a href="#">Пластиковые 25 мм.</a></li>
+                                    <li><a href="#">Алюминиевые 25/16 мм.</a></li>
+                                    <li><a href="#">Venus 25/16 мм.</a></li>
+                                    <li><a href="#">Деревяные 25/50 мм.</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="hover_menu_row">
+                            <a href="#" class="hover_menu_row_img">
+                                <img src="../../assets/img/Rectangle147.png" alt="">
+                            </a>
+                            <div class="hover_menu_row_content">
+                                <a href="#" class="hover_menu_row_title">Горизонтальные жалюзи</a>
+                                <ul class="hover_menu_row_info">
+                                    <li><a href="#"> Пластиковые 89 мм.</a></li>
+                                    <li><a href="#"> Тканевые 127/89 мм.</a></li>
+                                    <li><a href="#">Мультифактурные 89 мм.</a></li>
+                                    <li><a href="#">Нитяные 89 мм.</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="hover_menu_row">
+                            <div class="hover_menu_row_content">
+                                <a href="#" class="hover_menu_row_title">Жалюзи по назначению</a>
+                                <ul class="hover_menu_row_info">
+                                    <li><a href="#"> На дачу </a></li>
+                                    <li><a href="#"> На кухню </a></li>
+                                    <li><a href="#">В спальню </a></li>
+                                    <li><a href="#"> В гостинную</a></li>
+                                    <li><a href="#">В детскую комнату </a></li>
+                                    <li><a href="#">В ванную комнату</a></li>
+                                    <li><a href="#">В офис</a></li>
+                                    <li><a href="#">В школу</a></li>
+                                    <li><a href="#">На лоджию/балкон</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image_hover">
+                        <img src="../../assets/img/Rectangle148.png" alt="">
+                    </div>
+                </div>
             </li>
             <li class="icon_all">
                 <a class="menu_list_link">
                     Тканевые ролеты
                 </a>
                 <i class="dropdown icon"></i>
+                <div class="hover_list">
+                    <div class="hover_menu_container">
+                        <div class="hover_menu_row">
+                            <a href="#" class="hover_menu_row_img">
+                                <img src="../../assets/img/Rectangle146.png" alt="">
+                            </a>
+                            <div class="hover_menu_row_content">
+                                <a href="#" class="hover_menu_row_title">Горизонтальные жалюзи</a>
+                                <ul class="hover_menu_row_info">
+                                    <li><a href="#">Пластиковые 25 мм.</a></li>
+                                    <li><a href="#">Алюминиевые 25/16 мм.</a></li>
+                                    <li><a href="#">Venus 25/16 мм.</a></li>
+                                    <li><a href="#">Деревяные 25/50 мм.</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="hover_menu_row">
+                            <a href="#" class="hover_menu_row_img">
+                                <img src="../../assets/img/Rectangle147.png" alt="">
+                            </a>
+                            <div class="hover_menu_row_content">
+                                <a href="#" class="hover_menu_row_title">Горизонтальные жалюзи</a>
+                                <ul class="hover_menu_row_info">
+                                    <li><a href="#"> Пластиковые 89 мм.</a></li>
+                                    <li><a href="#"> Тканевые 127/89 мм.</a></li>
+                                    <li><a href="#">Мультифактурные 89 мм.</a></li>
+                                    <li><a href="#">Нитяные 89 мм.</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="hover_menu_row">
+                            <div class="hover_menu_row_content">
+                                <a href="#" class="hover_menu_row_title">Тканевые ролеты по назначению</a>
+                                <ul class="hover_menu_row_info">
+                                    <li><a href="#"> На дачу </a></li>
+                                    <li><a href="#"> На кухню </a></li>
+                                    <li><a href="#">В спальню </a></li>
+                                    <li><a href="#"> В гостинную</a></li>
+                                    <li><a href="#">В детскую комнату </a></li>
+                                    <li><a href="#">В ванную комнату</a></li>
+                                    <li><a href="#">В офис</a></li>
+                                    <li><a href="#">В школу</a></li>
+                                    <li><a href="#">На лоджию/балкон</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image_hover">
+                        <img src="../../assets/img/Rectangle148.png" alt="">
+                    </div>
+                </div>
             </li>
             <li class="icon_all">
                 <a class="menu_list_link">
@@ -227,13 +317,127 @@
             </li>
         </ul>
     </nav>
-    <div class="ui icon search input search_header_b">
+    <div class="ui icon search input search_header_b popup_click_search">
         <i class="search icon"></i>
         <input type="text" placeholder="Поиск по сайту ">
+    </div>
+    <div class="ui custom popup popup_search">
+        <div class="ui icon search input search_header_b">
+            <i class="search icon"></i>
+            <input type="text" placeholder="Поиск по сайту ">
+        </div>
+        <div class="result_container">
+            <div class="result_grid">
+                <div class="result_items">
+                    <a href="#" class="result_items_img">
+                        <img src="../../assets/img/basket_img.png" alt="">
+                    </a>
+                    <a href="#" class="result_items_title title">
+                        Горизонтальные алюминивые жалюзи Венус белые - 0221
+                    </a>
+                    <div class="result_items_info">
+                        <div class="result_items_info_l">
+                            <p>От</p>
+                            7 580 <span>грн.</span>
+                        </div>
+                        <a href="#" class="result_items_info_r">
+                            Подробнее
+                        </a>
+                    </div>
+                </div>
+                <div class="result_items">
+                    <a href="#" class="result_items_img">
+                        <img src="../../assets/img/basket_img.png" alt="">
+                    </a>
+                    <a href="#" class="result_items_title title">
+                        Горизонтальные алюминивые жалюзи Венус белые - 0221
+                    </a>
+                    <div class="result_items_info">
+                        <div class="result_items_info_l">
+                            <p>От</p>
+                            7 580 <span>грн.</span>
+                        </div>
+                        <a href="#" class="result_items_info_r">
+                            Подробнее
+                        </a>
+                    </div>
+                </div>
+                <div class="result_items">
+                    <a href="#" class="result_items_img">
+                        <img src="../../assets/img/basket_img.png" alt="">
+                    </a>
+                    <a href="#" class="result_items_title title">
+                        Горизонтальные алюминивые жалюзи Венус белые - 0221
+                    </a>
+                    <div class="result_items_info">
+                        <div class="result_items_info_l">
+                            <p>От</p>
+                            7 580 <span>грн.</span>
+                        </div>
+                        <a href="#" class="result_items_info_r">
+                            Подробнее
+                        </a>
+                    </div>
+                </div>
+                <div class="result_items">
+                    <a href="#" class="result_items_img">
+                        <img src="../../assets/img/basket_img.png" alt="">
+                    </a>
+                    <a href="#" class="result_items_title title">
+                        Горизонтальные алюминивые жалюзи Венус белые - 0221
+                    </a>
+                    <div class="result_items_info">
+                        <div class="result_items_info_l">
+                            <p>От</p>
+                            7 580 <span>грн.</span>
+                        </div>
+                        <a href="#" class="result_items_info_r">
+                            Подробнее
+                        </a>
+                    </div>
+                </div>
+                <div class="result_items">
+                    <a href="#" class="result_items_img">
+                        <img src="../../assets/img/basket_img.png" alt="">
+                    </a>
+                    <a href="#" class="result_items_title title">
+                        Горизонтальные алюминивые жалюзи Венус белые - 0221
+                    </a>
+                    <div class="result_items_info">
+                        <div class="result_items_info_l">
+                            <p>От</p>
+                            7 580 <span>грн.</span>
+                        </div>
+                        <a href="#" class="result_items_info_r">
+                            Подробнее
+                        </a>
+                    </div>
+                </div>
+                <div class="result_items">
+                    <a href="#" class="result_items_img">
+                        <img src="../../assets/img/basket_img.png" alt="">
+                    </a>
+                    <a href="#" class="result_items_title title">
+                        Горизонтальные алюминивые жалюзи Венус белые - 0221
+                    </a>
+                    <div class="result_items_info">
+                        <div class="result_items_info_l">
+                            <p>От</p>
+                            7 580 <span>грн.</span>
+                        </div>
+                        <a href="#" class="result_items_info_r">
+                            Подробнее
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="button_all_result button_all">
+            Все результаты поиска (250 товаров)
+        </a>
     </div>
 </div>
 {% block page %}{% endblock %}
 {% block footer %}{% endblock %}
-
 </body>
 </html>
