--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,9 +42,81 @@ header {
 .phone_popup_text:hover {
   text-decoration: underline; }
 
+.ui.form input:not([type]):focus, .ui.form input[type=date]:focus, .ui.form input[type=datetime-local]:focus, .ui.form input[type=email]:focus, .ui.form input[type=file]:focus, .ui.form input[type=number]:focus, .ui.form input[type=password]:focus, .ui.form input[type=search]:focus, .ui.form input[type=tel]:focus, .ui.form input[type=text]:focus, .ui.form input[type=time]:focus, .ui.form input[type=url]:focus {
+  border-radius: 0;
+  background: rgba(235, 235, 237, 0.5); }
+
+.header_measurer.entrance_text {
+  margin-bottom: 104px; }
+
+.ui.form .field > label.entrance_label {
+  margin-top: 16px;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: normal;
+  color: #4E4A65; }
+
+.entrance_button {
+  text-align: center;
+  margin-top: 64px; }
+
+.ui.selection.dropdown .menu > .item {
+  font-size: 14px;
+  line-height: 14px; }
+
+.ui.default.dropdown:not(.button) > .text, .ui.dropdown:not(.button) > .default.text {
+  color: #07021B; }
+
+.header_measurer.call_text {
+  margin-bottom: 162px; }
+
+.form_call button {
+  margin-top: 40px; }
+
+.ui.checkbox input:checked ~ .box:after, .ui.checkbox input:checked ~ label:after {
+  content: " ";
+  background: #E9484A;
+  width: 8px;
+  height: 8px;
+  top: 4px;
+  left: 4px; }
+
+.ui.checkbox .box:before, .ui.checkbox label:before {
+  box-sizing: border-box;
+  width: 16px;
+  height: 16px;
+  border-radius: 0;
+  border: 1px solid #07021B !important; }
+
+.form_date {
+  margin: 40px 0 48px; }
+
+.ui.search.dropdown > .text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px; }
+
+.ui.selection.dropdown {
+  background: #EBEBED;
+  border: none;
+  border-bottom: 2px solid #777588;
+  border-radius: 0; }
+
+.ui.form input:not([type]), .ui.form input[type=date], .ui.form input[type=datetime-local], .ui.form input[type=email], .ui.form input[type=file], .ui.form input[type=number], .ui.form input[type=password], .ui.form input[type=search], .ui.form input[type=tel], .ui.form input[type=text], .ui.form input[type=time], .ui.form input[type=url] {
+  background: #EBEBED;
+  border: none;
+  border-radius: 0;
+  border-bottom: 2px solid #777588; }
+  .ui.form input:not([type])::placeholder, .ui.form input[type=date]::placeholder, .ui.form input[type=datetime-local]::placeholder, .ui.form input[type=email]::placeholder, .ui.form input[type=file]::placeholder, .ui.form input[type=number]::placeholder, .ui.form input[type=password]::placeholder, .ui.form input[type=search]::placeholder, .ui.form input[type=tel]::placeholder, .ui.form input[type=text]::placeholder, .ui.form input[type=time]::placeholder, .ui.form input[type=url]::placeholder {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    color: #4E4A65; }
+
 .link_call {
   text-decoration-line: underline;
-  color: #E9484A; }
+  color: #E9484A;
+  cursor: pointer; }
 
 .phone_popup p {
   max-width: 122px;
@@ -55,6 +127,16 @@ header {
   font-weight: bold;
   color: #07021B; }
 
+.icon_all.active:before {
+  content: " ";
+  background: white;
+  top: 100%;
+  height: 37px;
+  width: 100%;
+  position: absolute; }
+.icon_all.active .hover_list {
+  pointer-events: auto;
+  opacity: 1; }
 .icon_all.active .icon {
   transform: rotate(180deg); }
 .icon_all .icon:before {
@@ -84,9 +166,48 @@ header {
   font-size: 16px;
   line-height: 16px; }
 
-.ui.selection.dropdown .dropdown.icon:before {
+.basket_items_close {
+  width: 40px;
+  height: 40px;
+  background: #EBEBED;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.basket_items_close svg rect {
+  fill: #E9484A; }
+
+i.icon.close:before {
+  content: " ";
+  background-size: 100%;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: url("../assets/img/svg/close.svg") no-repeat center !important; }
+
+.ui.modal > .close {
+  padding: 0;
+  right: 0;
+  top: 0;
+  opacity: 1;
+  width: 44px;
+  margin: 0;
+  height: 44px;
+  background: #4E4A65; }
+
+.submit {
+  padding: 20px 56px;
+  background: #E9484A;
+  border: 0;
+  margin-bottom: 20px;
+  width: 100%; }
+
+.ui.selection.dropdown.all_dropdown .dropdown.icon:before {
   display: none; }
-.ui.selection.dropdown .dropdown.icon {
+.ui.selection.dropdown.all_dropdown .dropdown.icon {
   width: 10px;
   height: 6px;
   justify-content: center;
@@ -139,8 +260,6 @@ header {
     display: none; }
   .ui.selection.dropdown.all_dropdown .menu > .item:last-child {
     margin-bottom: 0; }
-  .ui.selection.dropdown.all_dropdown .menu > .item {
-    margin-bottom: 12px; }
   .ui.selection.dropdown.all_dropdown .menu > .item {
     padding: 0 !important; }
   .ui.selection.dropdown.all_dropdown .menu > .item > a {
@@ -239,11 +358,16 @@ a:hover {
   padding: 28px 48px;
   background: #4E4A65; }
 
+.ui.dimmer {
+  background-color: rgba(7, 2, 27, 0.25); }
+
 .icon_img {
   cursor: pointer;
   position: relative;
   display: flex; }
-  .icon_img img {
+  .icon_img :hover path {
+    fill: #E9484A; }
+  .icon_img * {
     width: 20px;
     height: 20px; }
   .icon_img .label_icon {
@@ -287,9 +411,17 @@ a:hover {
   width: 100%; }
 
 .header_bottom {
-  padding: 28px 48px;
+  padding: 19px 48px;
   display: flex;
   align-items: center; }
+  .header_bottom.active:after {
+    content: " ";
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(7, 2, 27, 0.25); }
 
 .search_header_b {
   width: 100%;
@@ -328,8 +460,436 @@ a:hover {
   align-items: center;
   grid-gap: 40px; }
 
+.ui.dimmer,
+.scrolling.dimmable.dimmed > .dimmer {
+  padding: 0 !important;
+  overflow: hidden; }
+
 .buyer_popup_link {
   display: grid;
   grid-gap: 12px; }
+
+.ui.modal.left_modal.modal_basket {
+  padding: 64px;
+  max-width: 680px; }
+
+.ui.modal.left_modal {
+  margin: 0 !important; }
+
+.basket_bottom {
+  display: flex;
+  justify-content: space-between; }
+
+.basket_total {
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #4E4A65; }
+
+.modal_basket_b {
+  max-width: 360px;
+  margin: 0 auto;
+  width: 100%; }
+
+.header_measurer {
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 32px;
+  margin-bottom: 64px; }
+
+.header_date {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  margin-bottom: 24px; }
+
+.flex_container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  position: relative; }
+
+.password_info {
+  display: flex;
+  justify-content: space-between; }
+
+.link_underline {
+  font-size: 14px;
+  line-height: 14px;
+  text-decoration-line: underline;
+  cursor: pointer; }
+
+.password_info {
+  margin-top: 16px;
+  margin-bottom: 24px; }
+
+.cod_message > p {
+  margin-bottom: 14px; }
+
+.input_message {
+  display: grid;
+  grid-template-columns: repeat(4, 50px);
+  grid-gap: 8px; }
+  .input_message input {
+    padding: 0;
+    border-bottom: 0 !important;
+    text-align: center; }
+
+.form_password_reset p {
+  font-size: 14px;
+  font-weight: 14px; }
+
+.ui.modal.left_modal {
+  padding: 96px;
+  right: 0;
+  border-radius: 0;
+  max-width: 512px;
+  height: 100%; }
+
+.ui.icon.input.password_container .vision.active:before {
+  background-image: url("../assets/img/svg/eye_password_a.svg") !important;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  background-size: 100% !important;
+  opacity: 1; }
+
+.ui.icon.input > i.icon:not(.link) {
+  pointer-events: auto;
+  opacity: 1; }
+
+.ui.icon.input.password_container .vision:before {
+  opacity: .5;
+  transition: .5s all;
+  background-size: 100% !important;
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  cursor: pointer;
+  content: " ";
+  background-image: url("../assets/img/svg/eye_password.svg") !important; }
+
+.ui.input {
+  width: 100%; }
+
+.modal_text_bottom {
+  cursor: pointer;
+  margin-top: auto;
+  font-size: 16px;
+  line-height: 16px;
+  text-decoration-line: underline; }
+
+.basket_summa {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px; }
+  .basket_summa span {
+    font-size: 14px; }
+
+.container_text_gray {
+  color: #777588; }
+
+.basket_container {
+  padding-bottom: 46px;
+  border-bottom: 1px solid #EBEBED;
+  margin-bottom: 44px; }
+
+.basket_container_grid {
+  max-height: 541px;
+  overflow-y: scroll;
+  display: grid;
+  grid-gap: 48px; }
+
+.basket_total {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #4E4A65; }
+
+.header_measurer.basket_text {
+  margin-bottom: 64px; }
+
+.basket_info {
+  display: grid;
+  grid-gap: 16px; }
+  .basket_info li {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: flex-end; }
+
+.basket_info .container_text_r {
+  margin: 0; }
+
+.container_cost {
+  margin-top: 24px; }
+
+.container_cost {
+  display: grid;
+  grid-template-columns: 1fr 1fr; }
+
+.container_article {
+  display: flex;
+  align-items: center; }
+
+.container_text_r.cost_text_r {
+  font-size: 20px;
+  line-height: 20px;
+  margin-left: 0; }
+
+.container_text_l.cost_text_l {
+  font-size: 16px;
+  line-height: 16px; }
+
+.container_text_l {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px; }
+
+.basket_items_container {
+  max-width: 296px; }
+
+.container_text_r {
+  margin-left: 8px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 14px; }
+
+.basket_items {
+  display: grid;
+  grid-template-columns: 96px max-content 40px;
+  justify-content: space-between;
+  max-width: calc(432px + 40px + 32px);
+  width: 100%; }
+
+.basket_items_img {
+  width: 96px; }
+  .basket_items_img img {
+    width: 100%;
+    height: auto; }
+
+.title {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase; }
+
+.basket_items_title {
+  margin-bottom: 24px;
+  margin-top: 12px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase; }
+
+.result_items_img {
+  grid-column: 1;
+  grid-row: span 2; }
+
+.result_items {
+  display: grid;
+  grid-template-columns: 96px 1fr;
+  grid-gap: 20px; }
+
+.result_items_info_r {
+  font-size: 16px;
+  line-height: 16px;
+  text-align: right;
+  text-decoration-line: underline;
+  color: #E9484A; }
+
+.result_items_info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.result_container {
+  margin: 30px 0;
+  overflow: hidden;
+  overflow-y: scroll;
+  max-height: 700px;
+  padding-right: 8px; }
+
+.button_all_result {
+  background: #4E4A65;
+  padding: 20px 39px;
+  display: flex; }
+
+.result_grid {
+  display: grid;
+  grid-gap: 20px; }
+
+.result_items_info_l {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+  align-items: flex-end;
+  display: flex; }
+  .result_items_info_l p {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 14px;
+    color: #4E4A65;
+    margin-right: 8px; }
+  .result_items_info_l span {
+    font-size: 14px;
+    line-height: 14px;
+    margin-left: 3px; }
+
+.basket_button_modal {
+  margin-top: 24px; }
+
+.ui.popup.popup_search {
+  border: 1px solid #EBEBED !important;
+  box-shadow: none;
+  border-radius: 0;
+  margin: 0;
+  padding: 21px 40px;
+  top: 80px !important;
+  max-width: 508px;
+  width: 100%;
+  height: calc(100vh - 72px - 20px); }
+  .ui.popup.popup_search:before {
+    display: none; }
+  .ui.popup.popup_search .search_header_b {
+    max-width: 100%; }
+
+.hover_menu_container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 104px; }
+
+.hover_menu_row_img {
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .hover_menu_row_img img {
+    width: 100%;
+    height: auto;
+    max-width: 326px;
+    object-fit: cover;
+    max-height: 216px; }
+
+.hover_menu_row_info {
+  display: grid;
+  grid-gap: 20px;
+  margin-top: 32px; }
+  .hover_menu_row_info li a {
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: normal;
+    color: #4E4A65;
+    text-transform: none; }
+
+.slider_number_container {
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
+  grid-gap: 48px;
+  padding: 30px 120px;
+  background: #FFFFFF; }
+
+.home {
+  position: relative;
+  max-height: 812px;
+  padding-right: 48px; }
+
+.slider_text_number_b {
+  font-weight: bold; }
+
+.slider_text_number {
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase; }
+
+.home_left_container {
+  width: max-content;
+  background: #FFFFFF;
+  padding: 80px 80px 80px 113px;
+  position: relative;
+  left: -116px; }
+
+.home_left {
+  max-width: 824px;
+  position: absolute;
+  left: 116px;
+  bottom: 0;
+  z-index: 1; }
+
+.button_prev {
+  transform: rotate(180deg); }
+
+.button_slider {
+  cursor: pointer; }
+  .button_slider path {
+    fill: black; }
+
+.hover_list {
+  transition: .5s all;
+  pointer-events: none;
+  opacity: 0;
+  background: #EBEBED;
+  padding: 104px 104px 144px;
+  top: 53px;
+  position: absolute;
+  width: calc(100vw - 48px - 48px);
+  height: auto;
+  display: grid;
+  grid-template-columns: auto max-content;
+  grid-gap: 200px; }
+
+.home_slider_container {
+  padding-bottom: 40px; }
+
+.slider_number_container {
+  position: absolute;
+  bottom: 0;
+  right: 0; }
+
+.home_slider {
+  max-width: 1364px;
+  margin-left: auto; }
+
+.home_left_title_t {
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 64px;
+  margin-bottom: 40px;
+  color: #07021B; }
+
+.home_left_title_b {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 24px;
+  margin-bottom: 98px;
+  color: #07021B; }
+
+.home_left_text {
+  max-width: 424px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 64px; }
+
+.button_icon {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.image_arrow {
+  background: #E9484A;
+  margin-left: 16px; }
+
+.home_link {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: #07021B; }
 
 /*# sourceMappingURL=main.css.map */
