--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,7 +16,7 @@ $h7: 14px;
 
 body {
   margin: 0;
-  font-size: 14px;
+  font-size: $h7;
   font-family: 'Lato', sans-serif;
   color: $black;
 }
@@ -68,9 +68,97 @@ header {
   text-decoration: underline;
 }
 
+.ui.form input:not([type]):focus, .ui.form input[type=date]:focus, .ui.form input[type=datetime-local]:focus, .ui.form input[type=email]:focus, .ui.form input[type=file]:focus, .ui.form input[type=number]:focus, .ui.form input[type=password]:focus, .ui.form input[type=search]:focus, .ui.form input[type=tel]:focus, .ui.form input[type=text]:focus, .ui.form input[type=time]:focus, .ui.form input[type=url]:focus {
+  border-radius: 0;
+  background: rgba(235, 235, 237, .5);
+}
+
+.header_measurer.entrance_text {
+  margin-bottom: 104px;
+}
+
+.ui.form .field > label.entrance_label {
+  margin-top: 16px;
+  font-size: $h7;
+  line-height: $h6;
+  font-weight: normal;
+  color: #4E4A65;
+}
+
+.entrance_button {
+  text-align: center;
+  margin-top: 64px;
+}
+
+.ui.selection.dropdown .menu > .item {
+  font-size: $h7;
+  line-height: $h7;
+}
+
+.ui.default.dropdown:not(.button) > .text, .ui.dropdown:not(.button) > .default.text {
+  color: $black;
+}
+
+.header_measurer.call_text {
+  margin-bottom: 162px;
+}
+
+.form_call button {
+  margin-top: 40px;
+}
+
+.ui.checkbox input:checked ~ .box:after, .ui.checkbox input:checked ~ label:after {
+  content: " ";
+  background: $red;
+  width: 8px;
+  height: 8px;
+  top: 4px;
+  left: 4px;
+}
+
+.ui.checkbox .box:before, .ui.checkbox label:before {
+  box-sizing: border-box;
+  width: 16px;
+  height: 16px;
+  border-radius: 0;
+  border: 1px solid #07021B !important;
+}
+
+.form_date {
+  margin: 40px 0 48px;
+}
+
+.ui.search.dropdown > .text {
+  font-weight: 500;
+  font-size: $h7;
+  line-height: $h7;
+}
+
+.ui.selection.dropdown {
+  background: #EBEBED;
+  border: none;
+  border-bottom: 2px solid #777588;
+  border-radius: 0;
+}
+
+.ui.form input:not([type]), .ui.form input[type=date], .ui.form input[type=datetime-local], .ui.form input[type=email], .ui.form input[type=file], .ui.form input[type=number], .ui.form input[type=password], .ui.form input[type=search], .ui.form input[type=tel], .ui.form input[type=text], .ui.form input[type=time], .ui.form input[type=url] {
+  &::placeholder {
+    font-weight: 500;
+    font-size: $h7;
+    line-height: $h7;
+    color: #4E4A65;
+  }
+
+  background: #EBEBED;
+  border: none;
+  border-radius: 0;
+  border-bottom: 2px solid #777588;
+}
+
 .link_call {
   text-decoration-line: underline;
   color: $red;
+  cursor: pointer;
 }
 
 .phone_popup {
@@ -89,6 +177,20 @@ header {
 
 .icon_all {
   &.active {
+    &:before {
+      content: " ";
+      background: white;
+      top: 100%;
+      height: 37px;
+      width: 100%;
+      position: absolute;
+    }
+
+    .hover_list {
+      pointer-events: auto;
+      opacity: 1;
+    }
+
     .icon {
       transform: rotate(180deg);
     }
@@ -128,7 +230,52 @@ header {
 
 }
 
-.ui.selection.dropdown {
+.basket_items_close {
+  width: 40px;
+  height: 40px;
+  background: #EBEBED;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.basket_items_close svg rect {
+  fill: $red;
+}
+
+i.icon.close:before {
+  content: " ";
+  background-size: 100%;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: url("../assets/img/svg/close.svg") no-repeat center !important;
+
+}
+
+.ui.modal > .close {
+  padding: 0;
+  right: 0;
+  top: 0;
+  opacity: 1;
+  width: 44px;
+  margin: 0;
+  height: 44px;
+  background: #4E4A65;
+}
+
+.submit {
+  padding: 20px 56px;
+  background: #E9484A;
+  border: 0;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.ui.selection.dropdown.all_dropdown {
   .dropdown.icon:before {
     display: none;
   }
@@ -211,9 +358,6 @@ header {
     margin-bottom: 0;
   }
 
-  .menu > .item {
-    margin-bottom: 12px;
-  }
 
   .menu > .item {
     padding: 0 !important;
@@ -272,8 +416,8 @@ header {
 
 .content_city .content_city_text {
   font-weight: normal;
-  font-size: 14px;
-  line-height: 14px;
+  font-size: $h7;
+  line-height: $h7;
 
   &:hover {
     cursor: pointer;
@@ -292,8 +436,8 @@ header {
 .button_all {
   cursor: pointer;
   font-weight: bold;
-  font-size: 16px;
-  line-height: 16px;
+  font-size: $h6;
+  line-height: $h6;
   color: $white;
   text-transform: uppercase;
 }
@@ -349,12 +493,21 @@ a:hover {
 
 }
 
+.ui.dimmer {
+  background-color: rgba(7, 2, 27, .25);
+}
+
 .icon_img {
   cursor: pointer;
   position: relative;
   display: flex;
 
-  img {
+  :hover path {
+    fill: $red;
+  }
+
+  * {
+
     width: 20px;
     height: 20px;
   }
@@ -412,34 +565,51 @@ a:hover {
 }
 
 .header_bottom {
-  padding: 28px 48px;
+
+  &.active:after {
+    content: " ";
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(7, 2, 27, 0.25);
+  }
+
+  padding: 19px 48px;
   display: flex;
   align-items: center;
 }
-.search_header_b{
+
+.search_header_b {
   width: 100%;
   max-width: 350px;
 }
-.ui.search.search_header_b input::placeholder{
+
+.ui.search.search_header_b input::placeholder {
   font-size: $h6;
   line-height: $h6;
   color: #4E4A65;
 }
-.container_all{
+
+.container_all {
   padding: 0 116px;
 }
-.ui.icon.input .search.icon{
+
+.ui.icon.input .search.icon {
   background-size: 100%;
   background: url("../assets/img/svg/Search.svg") no-repeat center;
   width: 20px;
   height: 20px;
   top: 50%;
   opacity: 1;
-  transform: translate(0,-50%);
+  transform: translate(0, -50%);
 }
-.search.icon:before{
+
+.search.icon:before {
   display: none;
 }
+
 .ui.search.search_header_b input {
   border: none;
   border-radius: 0;
@@ -456,7 +626,534 @@ a:hover {
   grid-gap: 40px;
 }
 
+.ui.dimmer,
+.scrolling.dimmable.dimmed > .dimmer {
+  padding: 0 !important;
+  overflow: hidden;
+}
+
 .buyer_popup_link {
   display: grid;
   grid-gap: 12px;
+}
+
+.ui.modal.left_modal.modal_basket {
+  padding: 64px;
+  max-width: 680px;
+}
+
+.ui.modal.left_modal {
+  margin: 0 !important;
+}
+
+.basket_bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.basket_total {
+  font-size: 20px;
+  line-height: 20px;
+
+  text-transform: uppercase;
+  color: #4E4A65;
+}
+
+.modal_basket_b {
+  max-width: 360px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.header_measurer {
+  font-weight: bold;
+  font-size: $h4;
+  line-height: $h4;
+  margin-bottom: 64px;
+}
+
+.header_date {
+  font-weight: bold;
+  font-size: $h6;
+  line-height: $h6;
+  margin-bottom: 24px;
+}
+
+.flex_container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  position: relative;
+}
+
+.password_info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.link_underline {
+  font-size: $h7;
+  line-height: $h7;
+  text-decoration-line: underline;
+  cursor: pointer;
+
+}
+
+.password_info {
+  margin-top: 16px;
+  margin-bottom: 24px;
+}
+
+.cod_message > p {
+  margin-bottom: 14px;
+}
+
+.input_message {
+  input {
+    padding: 0;
+    border-bottom: 0 !important;
+    text-align: center;
+  }
+
+  display: grid;
+  grid-template-columns: repeat(4, 50px);
+  grid-gap: 8px;
+}
+
+.form_password_reset p {
+  font-size: $h7;
+  font-weight: $h7;
+}
+
+.ui.modal.left_modal {
+  padding: 96px;
+  right: 0;
+  border-radius: 0;
+  max-width: 512px;
+  height: 100%;
+}
+
+.ui.icon.input.password_container .vision.active:before {
+  background-image: url("../assets/img/svg/eye_password_a.svg") !important;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  background-size: 100% !important;
+  opacity: 1;
+}
+
+.ui.icon.input > i.icon:not(.link) {
+  pointer-events: auto;
+  opacity: 1;
+}
+
+.ui.icon.input.password_container .vision:before {
+  opacity: .5;
+  transition: .5s all;
+  background-size: 100% !important;
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  cursor: pointer;
+  content: " ";
+  background-image: url("../assets/img/svg/eye_password.svg") !important;
+}
+
+.ui.input {
+  width: 100%;
+}
+
+.modal_text_bottom {
+  cursor: pointer;
+  margin-top: auto;
+  font-size: $h6;
+  line-height: $h6;
+  text-decoration-line: underline;
+}
+
+.basket_summa {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+
+  span {
+    font-size: 14px;
+  }
+}
+
+
+.container_text_gray {
+  color: #777588;
+}
+
+.basket_container {
+  padding-bottom: 46px;
+  border-bottom: 1px solid #EBEBED;
+  margin-bottom: 44px;
+}
+
+.basket_container_grid {
+  max-height: 541px;
+  overflow-y: scroll;
+  display: grid;
+  grid-gap: 48px;
+}
+
+.basket_total {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #4E4A65;
+}
+
+.header_measurer.basket_text {
+  margin-bottom: 64px;
+}
+
+.basket_info {
+  display: grid;
+  grid-gap: 16px;
+
+  li {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: flex-end;
+  }
+}
+
+.basket_info .container_text_r {
+  margin: 0;
+}
+
+.container_cost {
+  margin-top: 24px
+}
+
+.container_cost {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.container_article {
+  display: flex;
+  align-items: center;
+}
+
+.container_text_r.cost_text_r {
+  font-size: 20px;
+  line-height: 20px;
+  margin-left: 0;
+}
+
+.container_text_l.cost_text_l {
+  font-size: 16px;
+  line-height: 16px;
+}
+
+.container_text_l {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+}
+
+.basket_items_container {
+  max-width: 296px;
+}
+
+.container_text_r {
+  margin-left: 8px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 14px;
+}
+
+.basket_items {
+  display: grid;
+  grid-template-columns: 96px max-content 40px;
+  justify-content: space-between;
+  max-width: calc(432px + 40px + 32px);
+  width: 100%;
+}
+
+.basket_items_img {
+  width: 96px;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.title {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.basket_items_title {
+  margin-bottom: 24px;
+  margin-top: 12px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.result_items_img {
+  grid-column: 1;
+  grid-row: span 2;
+}
+
+.result_items {
+  display: grid;
+  grid-template-columns: 96px 1fr;
+  grid-gap: 20px;
+}
+
+.result_items_info_r {
+  font-size: 16px;
+  line-height: 16px;
+  text-align: right;
+  text-decoration-line: underline;
+  color: #E9484A;
+}
+
+.result_items_info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.result_container {
+  margin: 30px 0;
+  overflow: hidden;
+  overflow-y: scroll;
+  max-height: 700px;
+  padding-right: 8px;
+}
+
+.button_all_result {
+  background: #4E4A65;
+  padding: 20px 39px;
+  display: flex;
+}
+
+.result_grid {
+
+  display: grid;
+  grid-gap: 20px;
+}
+
+.result_items_info_l {
+  p {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 14px;
+    color: #4E4A65;
+    margin-right: 8px;
+  }
+
+  span {
+    font-size: 14px;
+    line-height: 14px;
+    margin-left: 3px;
+
+  }
+
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+  align-items: flex-end;
+  display: flex;
+}
+
+
+.basket_button_modal {
+  margin-top: 24px;
+}
+
+.ui.popup.popup_search {
+
+  &:before {
+    display: none;
+  }
+
+  border: 1px solid #EBEBED !important;
+  box-shadow: none;
+  border-radius: 0;
+
+  .search_header_b {
+    max-width: 100%;
+  }
+
+  margin: 0;
+  padding: 21px 40px;
+  top: 80px !important;
+  max-width: 508px;
+  width: 100%;
+  height: calc(100vh - 72px - 20px);
+}
+
+.hover_menu_container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 104px;
+}
+
+.hover_menu_row_img {
+  img {
+    width: 100%;
+    height: auto;
+    max-width: 326px;
+    object-fit: cover;
+    max-height: 216px;
+  }
+
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.hover_menu_row_info {
+  display: grid;
+  grid-gap: 20px;
+  margin-top: 32px;
+
+  li a {
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: normal;
+    color: #4E4A65;
+    text-transform: none;
+  }
+}
+
+.slider_number_container {
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
+  grid-gap: 48px;
+  padding: 30px 120px;
+  background: #FFFFFF;
+}
+
+.home {
+  position: relative;
+  max-height: 812px;
+  padding-right: 48px;
+}
+.slider_text_number_b{
+  font-weight: bold;
+}
+.slider_text_number{
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+.home_left_container {
+  width: max-content;
+  background: #FFFFFF;
+  padding: 80px 80px 80px 113px;
+  position: relative;
+  left: -116px;
+}
+
+.home_left {
+  max-width: 824px;
+  position: absolute;
+  left: 116px;
+  bottom: 0;
+  z-index: 1;
+}
+
+.button_prev {
+  transform: rotate(180deg);
+}
+.button_slider{
+  path {
+    fill: black;
+  }
+  cursor: pointer;
+}
+
+
+.hover_list {
+  transition: .5s all;
+  pointer-events: none;
+  opacity: 0;
+  background: #EBEBED;
+  padding: 104px 104px 144px;
+  top: 53px;
+  position: absolute;
+  width: calc(100vw - 48px - 48px);
+  height: auto;
+  display: grid;
+  grid-template-columns: auto max-content;
+  grid-gap: 200px;
+}
+
+.home_slider_container {
+  padding-bottom: 40px;
+}
+
+.slider_number_container {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.home_slider {
+  max-width: 1364px;
+  margin-left: auto;
+}
+
+.home_left_title_t {
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 64px;
+  margin-bottom: 40px;
+  color: #07021B;
+}
+
+.home_left_title_b {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 24px;
+  margin-bottom: 98px;
+  color: #07021B;
+}
+
+.home_left_text {
+  max-width: 424px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 64px;
+}
+
+.button_icon {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image_arrow {
+  background: $red;
+  margin-left: 16px;
+}
+
+.home_link {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: #07021B;
 }
