--- a/src/templates/components/footer.twig
+++ b/src/templates/components/footer.twig
@@ -1,8 +1,361 @@
 {% extends "../layouts/default.twig" %}
 {% block footer %}
     <footer>
+
     </footer>
+    <div class="ui modal left_modal modal_measurer">
+        <i class="close icon"></i>
+        <div class="header_measurer">
+            Вызвать замерщика
+        </div>
+        <form class="ui form">
+            <div class="field">
+                <input type="text" name="first-name" placeholder="Введите Ваше имя">
+            </div>
+            <div class="field">
+                <input type="text" name="last-name" placeholder="Введите Ваш телефон">
+            </div>
+            <div class="field">
+                <select class="ui search dropdown">
+                    <option value="">Укажите Ваш город</option>
+                    <option value="KH">Харьков</option>
+                    <option value="KV">Киев</option>
+                </select>
+            </div>
+
+            <div class="form_date">
+                <h4 class="ui dividing header_date">Укажите удобную дату и время</h4>
+                <div class="two fields">
+                    <div class="field">
+                        <input placeholder="Дата" type="text">
+                    </div>
+                    <div class="field">
+                        <input placeholder="Время" type="text">
+                    </div>
+                </div>
+            </div>
+            <button class="ui button_all submit" type="submit">Оформить Заявку</button>
+            <div class="field">
+                <div class="ui checkbox">
+                    <input type="checkbox" tabindex="0" class="hidden">
+                    <label>Даю согласие на обработку моих персональных данных.</label>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="ui modal left_modal modal_call">
+        <i class="close icon"></i>
+        <div class="header_measurer call_text">
+            Обратный звонок
+        </div>
+        <form class="ui form form_call">
+            <div class="field">
+                <input type="text" name="first-name" placeholder="Введите Ваше имя">
+            </div>
+            <div class="field">
+                <input type="text" name="last-name" placeholder="Введите Ваш телефон">
+            </div>
+            <button class="ui button_all submit" type="submit">Оформить Заявку</button>
+            <div class="field">
+                <div class="ui checkbox">
+                    <input type="checkbox" tabindex="0" class="hidden">
+                    <label>Даю согласие на обработку моих персональных данных.</label>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="ui modal left_modal modal_entrance">
+        <i class="close icon"></i>
+        <div class="flex_container">
+            <div class="header_measurer entrance_text">
+                Вход
+            </div>
+            <form class="ui form form_entrance">
+                <div class="field">
+                    <input type="text" name="first-name" placeholder="E-mail или номер телефона">
+                    <label for="first-name" class="entrance_label"> Для авторизации по номеру телефона введите его в
+                        формате: 38ХХХХХХХХХХ</label>
+                </div>
+                <div class="ui button_all submit entrance_button" type="submit">Далее</div>
+                <div class="field">
+                    <div class="ui checkbox">
+                        <input type="checkbox" tabindex="0" class="hidden">
+                        <label>Даю согласие на обработку моих персональных данных.</label>
+                    </div>
+                </div>
+            </form>
+            <div class="modal_text_bottom" id="registration">Регистрация</div>
+        </div>
+    </div>
+    <div class="ui modal left_modal modal_phone">
+        <i class="close icon"></i>
+        <div class="flex_container">
+            <div class="header_measurer entrance_text">
+                Вход
+            </div>
+            <form class="ui form form_password_reset">
+                <div class="cod_message">
+                    <p class="text_bold_s">Введите код из смс</p>
+                    <div class="field input_message">
+                        <input type="number" name="one">
+                        <input type="number" name="two">
+                        <input type="number" name="three">
+                        <input type="number" name="four">
+                    </div>
+                </div>
+                <div class="password_info">
+                    <p>Не приходит смс?</p>
+                    <div class="link_underline message_click">Отправить ещё раз</div>
+                </div>
+                <div class="link_underline phone_click">Ввести другой номер телефона</div>
+                <div class="ui button_all submit entrance_button" type="submit">Войти</div>
+            </form>
+            <div class="modal_text_bottom" id="registration_phone">Регистрация</div>
+        </div>
+    </div>
+    <div class="ui modal left_modal modal_password_reset">
+        <i class="close icon"></i>
+        <div class="flex_container">
+            <div class="header_measurer entrance_text">
+                Востановление пароля
+            </div>
+            <form class="ui form form_password_reset">
+                <div class="field ">
+                    <input type="password" name="first-name" placeholder="Контрольное слово">
+                </div>
+                <div class="field ui icon input password_container">
+                    <i class="low vision icon"></i>
+                    <input type="password" name="first-name" placeholder="Пароль">
+                </div>
+                <p>
+                    Ссылка на востановление пароля отправленна на text@gmail.com
+                    <br>
+                    <br>
+                    Если ссылка не пришла проверьте спам или повторите попытку
+                </p>
+
+                <div class="ui button_all submit entrance_button" type="submit">Востоновить</div>
+            </form>
+            <div class="modal_text_bottom" id="password_reset">Вход</div>
+        </div>
+    </div>
+    <div class="ui modal left_modal modal_email">
+        <i class="close icon"></i>
+        <div class="flex_container">
+            <div class="header_measurer entrance_text">
+                Вход
+            </div>
+            <form class="ui form form_email">
+                <div class="field ui icon input password_container">
+                    <i class="low vision icon"></i>
+                    <input type="password" name="first-name" placeholder="Пароль">
+                </div>
+                <div class="password_info">
+                    <div class="password_reset link_underline">Восстановить пароль</div>
+                    <div class="prev_modal link_underline">Ввести другой E-mail</div>
+                </div>
+                <div class="ui button_all submit entrance_button" type="submit">Войти</div>
+            </form>
+            <div class="modal_text_bottom" id="registration">Регистрация</div>
+        </div>
+    </div>
+    <div class="ui modal left_modal modal_registration">
+        <i class="close icon"></i>
+        <div class="flex_container">
+            <div class="header_measurer entrance_text">
+                Регистрация
+            </div>
+            <form class="ui form form_registration">
+                <div class="field">
+                    <input type="text" name="first-name" placeholder="E-mail или номер телефона">
+                </div>
+                <div class="field">
+                    <input type="text" name="first-name" placeholder="Введите Ваш телефон">
+                </div>
+                <div class="field">
+                    <select class="ui search dropdown">
+                        <option value="">Укажите Ваш го род</option>
+                        <option value="KH">Харьков</option>
+                        <option value="KV">Киев</option>
+                    </select>
+                </div>
+                <div class="field ui icon input password_container">
+                    <i class="low vision icon"></i>
+                    <input type="password" name="first-name" placeholder="Пароль">
+                </div>
+                <button class="ui button_all submit entrance_button" type="submit">Зарегистрироваться</button>
+            </form>
+            <div class="modal_text_bottom" id="entrance">Вход</div>
+        </div>
+    </div>
+    <div class="ui modal left_modal modal_basket">
+        <i class="close icon"></i>
+        <div class="flex_container">
+            <div class="header_measurer basket_text">
+                В Вашей корзине
+            </div>
+            <div class="basket_container">
+                <div class="basket_container_grid">
+                    <div class="basket_items">
+                        <div class="basket_items_img">
+                            <img src="../../assets/img/basket_img.png" alt="">
+                        </div>
+                        <div class="basket_items_container">
+                            <div class="container_article">
+                                <div class="container_text_l container_text_gray">Артикул:</div>
+                                <div class="container_text_r">00035497</div>
+                            </div>
+                            <div class="basket_items_title text_bold_s">
+                                Горизонтальные алюминивые жалюзи Венус белые - 0221
+                            </div>
+                            <ul class="basket_info">
+                                <li>
+                                    <div class="container_text_l">Место крепления:</div>
+                                    <div class="container_text_r">на створку</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Ширина:</div>
+                                    <div class="container_text_r">90 см</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Высота:</div>
+                                    <div class="container_text_r">150 см</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Тип установки:</div>
+                                    <div class="container_text_r">со сверлением</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Управлен:</div>
+                                    <div class="container_text_r">левое</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Цвет:</div>
+                                    <div class="container_text_r"><img src="" alt="">блендный зелёный</div>
+                                </li>
+                            </ul>
+                            <div class="container_cost">
+                                <div class="container_text_l cost_text_l">Стоимость:</div>
+                                <div class="container_text_r cost_text_r">7 580 грн.</div>
+                            </div>
+                        </div>
+                        <div class="basket_items_close">
+                            <img src="../../assets/img/svg/close.svg" alt="" class="svg">
+                        </div>
+                    </div>
+                    <div class="basket_items">
+                        <div class="basket_items_img">
+                            <img src="../../assets/img/basket_img.png" alt="">
+                        </div>
+                        <div class="basket_items_container">
+                            <div class="container_article">
+                                <div class="container_text_l container_text_gray">Артикул:</div>
+                                <div class="container_text_r">00035497</div>
+                            </div>
+                            <div class="basket_items_title text_bold_s">
+                                Горизонтальные алюминивые жалюзи Венус белые - 0221
+                            </div>
+                            <ul class="basket_info">
+                                <li>
+                                    <div class="container_text_l">Место крепления:</div>
+                                    <div class="container_text_r">на створку</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Ширина:</div>
+                                    <div class="container_text_r">90 см</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Высота:</div>
+                                    <div class="container_text_r">150 см</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Тип установки:</div>
+                                    <div class="container_text_r">со сверлением</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Управлен:</div>
+                                    <div class="container_text_r">левое</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Цвет:</div>
+                                    <div class="container_text_r"><img src="" alt="">блендный зелёный</div>
+                                </li>
+                            </ul>
+                            <div class="container_cost">
+                                <div class="container_text_l cost_text_l">Стоимость:</div>
+                                <div class="container_text_r cost_text_r">7 580 грн.</div>
+                            </div>
+                        </div>
+                        <div class="basket_items_close">
+                            <img src="../../assets/img/svg/close.svg" alt="" class="svg">
+                        </div>
+                    </div>
+                    <div class="basket_items">
+                        <div class="basket_items_img">
+                            <img src="../../assets/img/basket_img.png" alt="">
+                        </div>
+                        <div class="basket_items_container">
+                            <div class="container_article">
+                                <div class="container_text_l container_text_gray">Артикул:</div>
+                                <div class="container_text_r">00035497</div>
+                            </div>
+                            <div class="basket_items_title text_bold_s">
+                                Горизонтальные алюминивые жалюзи Венус белые - 0221
+                            </div>
+                            <ul class="basket_info">
+                                <li>
+                                    <div class="container_text_l">Место крепления:</div>
+                                    <div class="container_text_r">на створку</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Ширина:</div>
+                                    <div class="container_text_r">90 см</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Высота:</div>
+                                    <div class="container_text_r">150 см</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Тип установки:</div>
+                                    <div class="container_text_r">со сверлением</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Управлен:</div>
+                                    <div class="container_text_r">левое</div>
+                                </li>
+                                <li>
+                                    <div class="container_text_l">Цвет:</div>
+                                    <div class="container_text_r"><img src="" alt="">блендный зелёный</div>
+                                </li>
+                            </ul>
+                            <div class="container_cost">
+                                <div class="container_text_l cost_text_l">Стоимость:</div>
+                                <div class="container_text_r cost_text_r">7 580 грн.</div>
+                            </div>
+                        </div>
+                        <div class="basket_items_close">
+                            <img src="../../assets/img/svg/close.svg" alt="" class="svg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal_basket_b">
+                <div class="basket_bottom">
+                    <div class="
+basket_total">Итого:
+                    </div>
+                    <div class="basket_summa">7 580 <span>грн.</span></div>
+                </div>
+                <button class="ui button_all submit basket_button_modal" type="submit">Оформить заказ</button>
+            </div>
+        </div>
+    </div>
+
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <script  src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
     <script src="js/app.js"></script>
+
 {% endblock %}
