--- a/src/templates/layouts/default.twig
+++ b/src/templates/layouts/default.twig
@@ -73,7 +73,7 @@
         <div class="ui custom popup popup_all phone_popup">
             <div class="link_call">Заказать звонок</div>
             <div class="social_link">
-                <a href="#" class="social_link_item">
+                <a href="#" target="_blank" class="social_link_item">
                     <div class="social_img">
                         <img src="../../assets/img/svg/Messenger.svg" alt="">
                     </div>
@@ -81,7 +81,7 @@
                         Messenger
                     </div>
                 </a>
-                <a href="#" class="social_link_item">
+                <a href="#" target="_blank" class="social_link_item">
                     <div class="social_img">
                         <img src="../../assets/img/svg/Viber.svg" alt="">
                     </div>
@@ -89,7 +89,7 @@
                         Viber
                     </div>
                 </a>
-                <a href="#" class="social_link_item">
+                <a href="#" target="_blank" class="social_link_item">
                     <div class="social_img">
                         <img src="../../assets/img/svg/What’s_app.svg" alt="">
                     </div>
@@ -97,7 +97,7 @@
                         What’s app
                     </div>
                 </a>
-                <a href="#" class="social_link_item">
+                <a href="#" target="_blank" class="social_link_item">
                     <div class="social_img">
                         <img src="../../assets/img/svg/Telegram.svg" alt="">
                     </div>
