--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -63,7 +63,11 @@ header {
     display: none;
   }
 }
-
+.phone_popup_text{
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+}
 .phone_popup_text:hover {
   text-decoration: underline;
 }
@@ -174,8 +178,11 @@ header {
     color: $black;
   }
 }
-
-.icon_all {
+.ui.bottom.popup.phone_popup{
+  width: 100%;
+  max-width: 183px;
+}
+.menu_list_grid .icon_all {
   &.active {
     &:before {
       content: " ";
@@ -185,6 +192,11 @@ header {
       width: 100%;
       position: absolute;
     }
+  }
+}
+.icon_all {
+  &.active {
+
 
     .hover_list {
       pointer-events: auto;
